--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,18 +1,22 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Secret Scanning
+
+on:
+  push:
+    branches:
+      -main
+    pull_request:
+      types: [closed]
+      branched:
+        -main
+
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: label-1
+  secret_scan:
+    runs-on: [label-1]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    - name: Checkout repository code
+      uses: actions/checkout@v4
+
+    - name: Run Trufflehog to scan for secrets 
+      run: |
+        REPO_NAME=$(basename $(git rev-parse --show-toplevel))
+        OUTPUT_FILE="${REPO_NAME}.json"
